--- a/Clarifion Upsell/index.html
+++ b/Clarifion Upsell/index.html
@@ -63,7 +63,7 @@
 
         <div class="code-padding code-row code-margin-bottom code-container code-round-xlarge" style="background: #faf8f8">
           <div class="code-col l6 code-container code-hide-small">
-            <img class="code-round-xlarge" src="files/images/features.PNG" style="width: 100%">
+            <img class="code-round-xlarge" src="files/images/features.png" style="width: 100%">
             <div class="code-panel code-white code-text-black code-padding code-round-xlarge code-card-4 code-hide-medium">
               <ul class="code-ul">
                 <li class="code-bar">
