--- a/Clarifion Upsell/index.html
+++ b/Clarifion Upsell/index.html
@@ -153,6 +153,6 @@
   <engine>
     <package></package>
     <library></library>
-    <script src="code-chain.cjs"></script>
+    <script src="code-chain.js"></script>
   </engine>
 </application>
